  zoom factor is retained when a bookmark is selected.
* pic, grap: Fixed 8-bit input in label texts (bug reported by Vladimir
  B. Machulsky).
* troff: The ".trimat", ".bleedat", and ".cropat" requests caused some
  following requests (e.g. ".fp") to fail because of an improper reset
  of number scaling (bug reported by Sebastian Leusch).

Release 060114
* troff: The internal codes for PostScript characters are now unique across
  all fonts. In effect, requests like ".tr" or ".lc" now handle arbitrary
  characters correctly, including locale-dependent ones.
* [nt]roff: The ".mk" request now accepts long register names.
* [nt]roff: Using ".wh" with an undefined long macro name now works as with
  undefined short names; the macro is executed once it has been created.
* troff/dpost: PostScript characters are now passed as "CPSname" in the
  intermediate output (instead of "Nnnn").
* troff/dpost/otfdump: Apple TrueType fonts with a "true" header magic can
  now be read (thanks to Stefan Tramm).
* troff/dpost/otfdump: TrueType handling has been made more robust against
  an error in Microsoft/Unicode "cmap" subtables.
* dpost: Error messages now include the number of the current output page.
* dpost: Color bars can now be generated with "-M colorbars", star targets
  with "-M startargets", and all marks are enabled with "-M all".
* dpost: The ".mediasize" request now also causes a "%%DocumentMedia:" DSC
  comment to be written. This enables some PostScript previewer programs
  to determine the document size.
* troff: On a font mounted with ".fps punct", the "\(en" character is now
  available as expected.
* pic/dpost: The PostScript implementation of the "Dl" (draw line)
  operation has been fixed to move to the beginning of the line properly
  even when "inpath" is set. This fixes "box fill 0" for pic.
* dpost: The geometry setup for drawing commands is now executed in the
  setup section for each page. This makes pic work with filters that